chore(v5): publication only in Docker Hub (REVERT)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,6 +42,13 @@ jobs:
         run: |
           helm package charts/ontrack
 
+      - name: Publishing in Chart Museum
+        run: |
+          curl --data-binary "@$(ls yontrack-*.tgz)" \
+            --fail \
+            --user "${{ secrets.CHARTMUSEUM_USERNAME }}:${{ secrets.CHARTMUSEUM_PASSWORD }}"\
+            https://chartmuseum.nemerosa.net/api/charts
+
       - name: Publishing in Docker Hub (OCI)
         run: |
           helm registry login registry-1.docker.io \
