chore(v5): client secret for Keycloak can be defined in an external secret

--- a/charts/ontrack/values.yaml
+++ b/charts/ontrack/values.yaml
@@ -368,6 +368,21 @@ auth:
       name: ontrack-keycloak
       # -- Generating the client secret
       generate: true
+      # -- External secret for the client secret
+      external:
+        # -- Creating the external secret definition
+        enabled: false
+        # -- Refresh interval
+        refreshInterval: 6h
+        # -- Location of the secret to bind to
+        store:
+          # -- Name of the secret store
+          name: vault-backend
+          # -- Scope of the secret store
+          kind: ClusterSecretStore
+          # -- Path to the secret in the store.
+          # The entry is expected to have the following keys: bindDn & bindCredential
+          path: ontrack/keycloak/client
     # -- Connection parameters to Keycloak
     client:
       # -- Client ID
