chore(v5): client secret for Keycloak can be defined in an external secret - configuration of the external key

--- a/charts/ontrack/templates/keycloak-client-external-secret.yaml
+++ b/charts/ontrack/templates/keycloak-client-external-secret.yaml
@@ -18,5 +18,5 @@ spec:
     - secretKey: client-secret
       remoteRef:
         key: {{ .Values.auth.keycloak.secret.external.store.path | quote }}
-        property: client-secret
+        property: {{ .Values.auth.keycloak.secret.external.store.key | quote }}
 {{- end }}
