chore(v5): custom signin page - fixing the value name

--- a/charts/ontrack/templates/ui-deployment.yaml
+++ b/charts/ontrack/templates/ui-deployment.yaml
@@ -41,7 +41,7 @@ spec:
             - name: ONTRACK_URL
               value: "http://{{ include "ontrack.fullname" . }}:{{ .Values.service.port }}"
             - name: YONTRACK_UI_AUTH_SIGNIN_CUSTOM
-              value: {{ .Values.ontrack.ui.config.customSign | quote }}
+              value: {{ .Values.ontrack.ui.config.customSignin | toString | quote }}
             - name: NEXTAUTH_URL
               value: {{ .Values.ontrack.url | quote }}
             {{- if .Values.auth.oidc.enabled }}
