fix: disabling the installation of Elasticsearch when `elasticsearch.enabled` is set to `false`
(cherry picked from commit cd54ddd91927fd6db1521a883b3b8198e4c1f52c)

--- a/charts/ontrack/Chart.yaml
+++ b/charts/ontrack/Chart.yaml
@@ -38,3 +38,4 @@ dependencies:
   - name: elasticsearch
     repository: https://helm.elastic.co
     version: 7.17.3
+    condition: elasticsearch.enabled
