--- a/charts/ontrack/Chart.yaml
+++ b/charts/ontrack/Chart.yaml
@@ -33,3 +33,4 @@ dependencies:
   - name: elasticsearch
     repository: https://helm.elastic.co
     version: 7.17.3
+    condition: elasticsearch.enabled
