--- a/charts/ontrack/values.yaml
+++ b/charts/ontrack/values.yaml
@@ -153,7 +153,7 @@ ontrack:
       directory: "/var/ontrack/key_store"
     # License management
     license:
-      # Type of license: none, stripe, fixed
+      # Type of license: none, stripe, fixed, embedded
       type: none
       # For Fixed based configuration
       fixed:
