--- a/charts/ontrack/Chart.yaml
+++ b/charts/ontrack/Chart.yaml
@@ -15,7 +15,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 1.0.0+alpha-047
+version: 1.0.0+alpha-048
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
@@ -30,7 +30,7 @@ dependencies:
   - name: postgresql
     alias: keycloak-postgresql
     repository: https://charts.bitnami.com/bitnami
-    version: 12.12.10
+    version:  16.7.27 # PG 17.6.0
     condition: auth.keycloak.enabled
   - name: rabbitmq
     repository: https://charts.bitnami.com/bitnami
