--- a/charts/ontrack/Chart.yaml
+++ b/charts/ontrack/Chart.yaml
@@ -15,7 +15,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 1.0.0+alpha-048
+version: 1.0.0+alpha-049
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
@@ -34,7 +34,7 @@ dependencies:
     condition: auth.keycloak.enabled
   - name: rabbitmq
     repository: https://charts.bitnami.com/bitnami
-    version: 14.7.0
+    version: 16.0.14 # RabbitMQ 4.1.3
   - name: elasticsearch
     repository: https://helm.elastic.co
     version: 7.17.3
