chore: upgrade Elasticsearch 9.2.0

--- a/charts/ontrack/Chart.yaml
+++ b/charts/ontrack/Chart.yaml
@@ -36,6 +36,6 @@ dependencies:
     repository: https://charts.bitnami.com/bitnami
     version: 16.0.14 # RabbitMQ 4.1.3
   - name: elasticsearch
-    repository: https://helm.elastic.co
-    version: 7.17.3
+    repository: https://charts.bitnami.com/bitnami
+    version: 21.3.25  # Elasticsearch 9.2.0
     condition: elasticsearch.enabled
