chore: upgrade Elasticsearch 9.2.0 - using Bitnami legacy repo for os-shell (sysctl)

--- a/charts/ontrack/values.yaml
+++ b/charts/ontrack/values.yaml
@@ -582,6 +582,8 @@ elasticsearch:
   volumePermissions:
     image:
       repository: bitnamilegacy/os-shell
+  sysctlImage:
+    repository: bitnamilegacy/os-shell
   enabled: true
   maxUnavailable: 0 # Even in K8S 1.25, the Pod Disruption budget is generated for policy/v1beta instead of policy/v1
   replicas: 1
