chore: upgrade Elasticsearch 9.2.0 - fixing URL used by Yontrack

--- a/charts/ontrack/templates/ontrack-deployment.yaml
+++ b/charts/ontrack/templates/ontrack-deployment.yaml
@@ -116,7 +116,7 @@ spec:
             # Elasticsearch configuration
             ########################################
             - name: SPRING_ELASTICSEARCH_URIS
-              value: "http://{{ .Values.elasticsearch.masterService }}-headless:9200"
+              value: "http://{{ .Release.Name }}-elasticsearch-master-hl:9200"
             ########################################
             # RabbitMQ configuration
             ########################################
