chore: upgrade Elasticsearch 9.2.0
Configuring ES in single-mode

--- a/charts/ontrack/values.yaml
+++ b/charts/ontrack/values.yaml
@@ -589,6 +589,7 @@ elasticsearch:
     tls:
       restEncryption: false
   master:
+    masterOnly: false
     replicaCount: 1
     resourcesPreset: small
     persistence:
