chore: upgrade Elasticsearch 9.2.0
Init container in Yontrack to check for ES to be ready

--- a/charts/ontrack/values.yaml
+++ b/charts/ontrack/values.yaml
@@ -577,6 +577,8 @@ rabbitmq:
 
 # -- Local Elasticsearch engine for testing purpose
 elasticsearch:
+  # -- Enabling the Elasticsearch deployment (when not using an external Elasticsearch cluster)
+  enabled: true
   image:
     repository: bitnamilegacy/elasticsearch
   volumePermissions:
