chore: keycloak bootstrapping

--- a/charts/ontrack/templates/keycloak-bootstrap-external-secret.yaml
+++ b/charts/ontrack/templates/keycloak-bootstrap-external-secret.yaml
@@ -14,9 +14,9 @@ spec:
     - secretKey: username
       remoteRef:
         key: {{ .Values.auth.keycloak.bootstrap.bootstrapSecret.externalSecret.store.path | quote }}
-        property: username
+        property: {{ .Values.auth.keycloak.bootstrap.bootstrapSecret.externalSecret.store.usernameKey }}
     - secretKey: password
       remoteRef:
         key: {{ .Values.auth.keycloak.bootstrap.bootstrapSecret.externalSecret.store.path | quote }}
-        property: password
+        property: {{ .Values.auth.keycloak.bootstrap.bootstrapSecret.externalSecret.store.password }}
 {{- end }}
