chore: keycloak bootstrapping - fixing password key

--- a/charts/ontrack/templates/keycloak-bootstrap-external-secret.yaml
+++ b/charts/ontrack/templates/keycloak-bootstrap-external-secret.yaml
@@ -18,5 +18,5 @@ spec:
     - secretKey: password
       remoteRef:
         key: {{ .Values.auth.keycloak.bootstrap.bootstrapSecret.externalSecret.store.path | quote }}
-        property: {{ .Values.auth.keycloak.bootstrap.bootstrapSecret.externalSecret.store.password }}
+        property: {{ .Values.auth.keycloak.bootstrap.bootstrapSecret.externalSecret.store.passwordKey }}
 {{- end }}
