chore: initial admin user from a secret (external) fix: conditions & name

--- a/charts/ontrack/templates/keycloak-admin-external-secret.yaml
+++ b/charts/ontrack/templates/keycloak-admin-external-secret.yaml
@@ -1,13 +1,14 @@
 {{- if and
   .Values.auth.keycloak.enabled
+  (not .Values.auth.keycloak.external.enabled)
   .Values.auth.keycloak.settings.enabled
   .Values.auth.keycloak.settings.admin.secret.enabled
   .Values.auth.keycloak.settings.admin.secret.external.enabled
- }}
+}}
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: {{ .Release.Name }}-keycloak-admin-external-secret
+  name: {{ .Release.Name }}-yontrack-admin-external-secret
 spec:
   refreshInterval: {{ .Values.auth.keycloak.settings.admin.secret.external.refreshInterval | quote }}
   secretStoreRef:
