chore: Casc external secrets - less conditions

--- a/charts/ontrack/templates/ontrack-casc-secrets.yaml
+++ b/charts/ontrack/templates/ontrack-casc-secrets.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.ontrack.casc.enabled .Values.casc .Values.ontrack.casc.externalSecrets.enabled -}}
+{{- if and .Values.ontrack.casc.enabled .Values.ontrack.casc.externalSecrets.enabled -}}
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
