fix: encryption key in the external secret store

--- a/charts/ontrack/templates/ontrack-encryption-external-secret.yaml
+++ b/charts/ontrack/templates/ontrack-encryption-external-secret.yaml
@@ -14,6 +14,6 @@ spec:
     - secretKey: net.nemerosa.ontrack.security.EncryptionServiceImpl.encryption
       remoteRef:
         key: {{ .Values.ontrack.config.secret_key_store.external.store.path | quote }}
-        property: yontrackEncryptionKey
+        property: {{ .Values.ontrack.config.secret_key_store.external.store.key | quote }}
         decodingStrategy: Base64
 {{- end }}
