--- a/charts/ontrack/templates/keycloak-client-secret.yaml
+++ b/charts/ontrack/templates/keycloak-client-secret.yaml
@@ -1,5 +1,5 @@
 {{- if and
-  .Values.auth.keycloak.enabled
+  (eq "keycloak" .Values.auth.kind)
   .Values.auth.keycloak.secret.enabled
   .Values.auth.keycloak.secret.generate
 }}
