--- a/charts/ontrack/templates/keycloak-ldap-external-secret.yaml
+++ b/charts/ontrack/templates/keycloak-ldap-external-secret.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.auth.keycloak.enabled .Values.auth.keycloak.ldap.enabled .Values.auth.keycloak.ldap.bindCredentialSecret.enabled .Values.auth.keycloak.ldap.bindCredentialSecret.externalSecret.enabled }}
+{{- if and (eq "keycloak" .Values.auth.kind) .Values.auth.keycloak.ldap.enabled .Values.auth.keycloak.ldap.bindCredentialSecret.enabled .Values.auth.keycloak.ldap.bindCredentialSecret.externalSecret.enabled }}
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
