--- a/charts/ontrack/templates/oidc-external-secret.yaml
+++ b/charts/ontrack/templates/oidc-external-secret.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.auth.oidc.enabled .Values.auth.oidc.credentials.secret.enabled .Values.auth.oidc.credentials.secret.externalSecret.enabled }}
+{{- if and (eq "oidc" .Values.auth.kind) .Values.auth.oidc.credentials.secret.enabled .Values.auth.oidc.credentials.secret.externalSecret.enabled }}
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
