--- a/charts/ontrack/templates/keycloak-bootstrap-secret.yaml
+++ b/charts/ontrack/templates/keycloak-bootstrap-secret.yaml
@@ -1,5 +1,5 @@
 {{- if and
-  .Values.auth.keycloak.enabled
+  (eq "keycloak" .Values.auth.kind)
   (not .Values.auth.keycloak.external.enabled)
   .Values.auth.keycloak.bootstrap.bootstrapSecret.enabled
   .Values.auth.keycloak.bootstrap.bootstrapSecret.generate
