--- a/charts/ontrack/templates/keycloak-settings.yaml
+++ b/charts/ontrack/templates/keycloak-settings.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.auth.keycloak.enabled (not .Values.auth.keycloak.external.enabled) .Values.auth.keycloak.settings.enabled }}
+{{- if and (eq "keycloak" .Values.auth.kind) (not .Values.auth.keycloak.external.enabled) .Values.auth.keycloak.settings.enabled }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
