--- a/charts/ontrack/templates/keycloak-theme.yaml
+++ b/charts/ontrack/templates/keycloak-theme.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.auth.keycloak.enabled (not .Values.auth.keycloak.external.enabled)}}
+{{- if and (eq "keycloak" .Values.auth.kind) (not .Values.auth.keycloak.external.enabled)}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
